--- a/Final_Presentation/ETL_functions.ipynb
+++ b/Final_Presentation/ETL_functions.ipynb
@@ -1192,7 +1192,7 @@
    "outputs": [],
    "source": [
     "# Eliminamos los valores NaN de la columna 'modify_date'\n",
-    "data.dropna(subset=['modify_date'], inplace=True, ignore_index=True)"
+    "data.dropna(subset=['modify_date'], inplace=True)"
    ]
   },
   {
